funcionando! voy a por la tienda

--- a/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/Messages.properties
+++ b/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/Messages.properties
@@ -1,4 +1,5 @@
 error.name.required=User name is required
+error.name.repeated=User already exists
 error.password.required=Password is required
 error.email.required=Email is required
 error.email.invalid=You must use a valid mail
