añado estilos y comienzo con la lista de precios

--- a/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/Messages.properties
+++ b/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/Messages.properties
@@ -1,3 +1,9 @@
+# propiedades generales de struts
+errors.prefix=<span class="ui-state-error"> 
+errors.suffix=</span> 
+
+
+# mensajes
 error.name.required=User name is required
 error.name.repeated=User already exists
 error.password.required=Password is required
