ya muestro la lista de la compra. Sólo queda comprar :D

--- a/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/Messages.properties
+++ b/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/Messages.properties
@@ -1,6 +1,6 @@
 # propiedades generales de struts
-errors.prefix=<span class="ui-state-error"> 
-errors.suffix=</span> 
+errors.prefix=<span class="ui-icon ui-icon-alert" title="
+errors.suffix="></span> 
 
 
 # mensajes
