Añado el about. Corregido un problema de persistencia. Los productos parecen no actualizarse bien. mejoras visuales

--- a/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/Messages.properties
+++ b/practicas/proyecto/project-ui/src/main/resources/org/magmax/master/proyecto/ui/Messages.properties
@@ -4,8 +4,9 @@ errors.suffix="></span>
 
 
 # mensajes
-error.name.required=User name is required
-error.name.repeated=User already exists
-error.password.required=Password is required
-error.email.required=Email is required
-error.email.invalid=You must use a valid mail
+warning.user.notfound=No se encontr\u00f3 el usuario. Quiz\u00e1 quiera registarse.
+error.name.required=El nombre de usuario es obligatorio
+error.name.repeated=El usuario ya existe
+error.password.required=La contrase\u00f1a es obligatoria
+error.email.required=El e-mail es obligatorio
+error.email.invalid=La direcci\u00f3n e-mail no es v\u00e1lida
